# nonogram-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: nonogram.md
includes/: Definitions.hpp  Solver.cpp  Solver.hpp
includes/Graph/: AdjacencyList.hpp  Definitions.hpp  Edge.h  Edge.hpp  MaxFlow.hpp  Scc.hpp  TopologicalSort.hpp
includes/Utilities/: Array2D.hpp  Array3D.hpp  DisjointSet.h  Timer.h  UtilityTemplates.hpp
samples/: 1.in  10.in  11.in  12.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
samples/webpbn/: #21  #22336  #6574  #8098
src/: 2sat.cpp  Solver.cpp  generator.cpp  main.cpp  solver.cpp  verifier.cpp
src/Graph/: AdjacencyList.cpp  Edge.cpp  MaxFlow.cpp  Scc.cpp  TopologicalSort.cpp
src/Utilities/: DisjointSet.cpp  Timer.cpp
src/test/: Test.cpp  TestArray2D.cpp  TestArray3D.cpp  TestMaxFlow.cpp  Tester.cpp  Tester.hpp
